synconme/synconme/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synconme
  namespace: lamason
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: lamason-synconme
      app.kubernetes.io/name: helm-synconme
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: lamason-synconme
        app.kubernetes.io/name: helm-synconme
    spec:
      containers:
        - name: helm-synconme
          image: 242202494099.dkr.ecr.us-east-2.amazonaws.com/lamason/synconme:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
