synconme/synconme/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synconme
  namespace: lamason
  labels:
    app.kubernetes.io/instance: lamason-synconme
    app.kubernetes.io/name: helm-synconme
  annotations:
    alb.ingress.kubernetes.io/group.name: lamason
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=0
    alb.ingress.kubernetes.io/target-type: instance
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: api.synconme.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synconme
                port:
                  number: 8080
